# die-gulde

./: .gitignore  .releaserc  CODE_OF_CONDUCT.md  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/workflows/: CI.yml  acquire-license.yml  build-pr.yml  build.yml  check-odin.sh  ci.yml  greetings.yml  return-license.yml  test-pr.yml  test.yml  tests.yml
decoder/: a_geb_decoder.py  a_obj_decoder.py  decode_sounds.py  decoder.py  graphics_decoder.py  models_decoder.py  objects_decoder.py  sbf_decoder.py
die-gulde/Assets/: Box01.gltf
die-gulde/Assets/Gulde.Client/: ClientComponent.cs  GildeTransform.cs  (+2 more)
die-gulde/Assets/Gulde.Client.PlayTests/: DummyTests.cs  Gulde.Client.PlayTests.asmdef
die-gulde/Assets/Gulde.Client.Tests/: DummyTests.cs  Gulde.Client.Tests.asmdef
die-gulde/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
gilde_decoder/: animation.imhex  animations_decoder.py  bgf_anim_decoder.py  buildings_decoder.py  const.py  decoder.py  gltf_test.py  graphics_decoder.py  helpers.py  logger.py  main.py  models_decoder.py  sounds_decoder.py
gilde_decoder/data/: animations_argument_parser.py  face.py  models_argument_parser.py  texture_coordinate.py  vertex.py
src/: GuldeClient.csproj.DotSettings  GuldeEditor.csproj.DotSettings  GuldeLib.csproj.DotSettings
src/Assets/: InitTestScene637652753758708307.unity  InitTestScene637661291558491161.unity  InitTestScene637661392704084675.unity  InitTestScene637663983009629532.unity  InitTestScene637666452707830265.unity
src/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  ProjectSettings.asset  TagManager.asset
(+791 files in other folders)
