[tool.poetry]
name = "gilde-decoder"
version = "1.0.0"
description = ""
authors = ["Lennard Beers <l.beers@outlook.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gilde_decoder"}]

[tool.poetry.scripts]
gilde-decoder = "gilde_decoder.decoder:main"
models = "gilde_decoder.models_decoder:main"

[tool.poetry.dependencies]
python = "^3.10"
vedo = "^2023.4.4"
typed-argument-parser = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.3"
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

[tool.pylint.LOGGING]
good-names="i,j,k,ex,Run,_,e,x,y,z,n,id,a,b,c,x1,x2,x3,y1,y2,y3,z1,z2,z3,n1,n2,n3,v1,v2,v3"
disable="R0902,R0914,R0913,W1201,W1203"